--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-flip-move": "^3.0.4",
     "react-scripts": "4.0.3",
     "soundfont-player": "^0.12.0",
+    "sweetalert2": "^11.1.10",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
